# SmartShop

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  SmartShop.sln
Components/: CMakeLists.txt  install_components.sh
Components/Scheduler-master/: Scheduler.h
Components/WebServer/: CMakeLists.txt
Components/build-scripts/: archive.sh  base64.sh  bzip.sh  cjson.sh  cxxopts.sh  date.sh  httpserver.sh  lvgl.sh  md5.sh  microhttpd.sh  nettle.sh  oatpp.sh  pigpio.sh  sigar.sh  sqlite3.sh  sqliteorm.sh  uuid.sh  wiringx.sh  wpa.sh  zeroconf.sh
Components/bzip2-1.0.8/: CMakeLists.txt
Components/cJSON-master/: CMakeLists.txt
Components/cpp-base64-master/: CMakeLists.txt
Components/libarchive-3.6.2/: CMakeLists.txt
Components/libarchive-master/: config.h
Components/libuuid-master/: CMakeLists.txt  LICENSE  README.md
Components/libwpa/: CMakeLists.txt  libwpa-Debug.vgdbsettings  libwpa-Release.vgdbsettings  libwpa.vcxproj
Components/md5-master/: CMakeLists.txt
Components/mosquitto-2.0.15/: CMakeLists.txt
Components/oatpp-master/: CMakeLists.txt
Components/pigpio-master/: CMakeLists.txt
Components/sigar-master/: CMakeLists.txt
Components/sqlite3/: CMakeLists.txt  Makefile  config.status  libtool  sqlite3.pc
Components/wiringX-master/: CMakeLists.txt
DB/: BinaryData.h  CMakeLists.txt  ColorData.h  DB-Debug.vgdbsettings  DB-Release.vgdbsettings  DB.cpp  DB.h  DB.vcxproj  DB.vcxproj.filters  DBBinaryData.h  DBColorData.h  DBDevice.h  DBDeviceConfig.h  DBDeviceConfigItem.h  DBEventData.h  DBFloatData.h  DBInstall.h  DBIntData.h  DBStringData.h  DBStringLegalValues.h  DBSwitchData.h  DBVectorData.h  EventData.h  FloatData.h  IntData.h  StringData.h  SwitchData.h  VectorData.h  dbstat.h  version.json
Device/: CMakeLists.txt  Device-Debug.vgdbsettings  Device-Release.vgdbsettings  Device.vcxproj  Device.vcxproj.filters  DeviceBase.cpp  DeviceBase.h  DeviceConfig.cpp  DeviceConfig.h  DeviceConfigItem.h  DeviceEnums.h  DeviceLoader.cpp  DeviceLoader.hpp  DeviceManager.cpp  DeviceManager.h  DevicePluginManager.h  DevicePluiginManager.cpp  GPIODevice.cpp  GPIODevice.h  GPIOPinDef.h  I2CDevice.cpp  I2CDevice.h  Sensor.h  version.json
Device/AHTX0Sensor/: AHTX0Sensor-Debug.vgdbsettings  AHTX0Sensor-Release.vgdbsettings  AHTX0Sensor.cpp  AHTX0Sensor.h  AHTX0Sensor.vcxproj  AHTX0Sensor.vcxproj.filters  CMakeLists.txt  Defines.h
Device/DeviceTests/: CMakeLists.txt  DeviceTests-Debug.vgdbsettings  DeviceTests-Release.vgdbsettings  DeviceTests.cpp  DeviceTests.vcxproj  DeviceTests.vcxproj.filters  DeviceTests.vgdbsettings  DeviceTestsTests.cpp
Device/MCP9808Sensor/: CMakeLists.txt  Defines.h  MCP9808Sensor-Debug.vgdbsettings  MCP9808Sensor-Release.vgdbsettings  MCP9808Sensor.cpp  MCP9808Sensor.h  MCP9808Sensor.vcxproj  MCP9808Sensor.vcxproj.filters
Device/PCA9685Device/: CMakeLists.txt  Defines.h  PCA9685Device-Debug.vgdbsettings  PCA9685Device-Release.vgdbsettings  PCA9685Device.cpp  PCA9685Device.h  PCA9685Device.vcxproj  PCA9685Device.vcxproj.filters  version.json
Device/PM25AQISensor/: CMakeLists.txt  PM25AQISensor-Debug.vgdbsettings  PM25AQISensor-Release.vgdbsettings  (+4 more)
EventEndpoint/: CMakeLists.txt  EventEndpoint-Debug.vgdbsettings  EventEndpoint-Release.vgdbsettings  EventEndpoint.h  EventEndpoint.vcxproj  EventEndpoint.vcxproj.filters
LogEndpoint/: CMakeLists.txt  LogEndpoint-Debug.vgdbsettings  LogEndpoint-Release.vgdbsettings  LogEndpoint.cpp  LogEndpoint.h  LogEndpoint.vcxproj  LogEndpoint.vcxproj.filters  version.json
Logger/: CMakeLists.txt  DBSink.h  JSONSync.h  LogLevel.h  LogMsg.h  Logger-Debug.vgdbsettings  Logger-Release.vgdbsettings  Logger.cpp  Logger.h  Logger.vcxproj  Logger.vcxproj.filters  RemoteSync.h  RemoteSyncAPI.h  version.json
NetworkTools/: CMakeLists.txt  NetworkTools-Debug.vgdbsettings  NetworkTools-Release.vgdbsettings  NetworkTools.cpp  NetworkTools.h  NetworkTools.vcxproj  NetworkTools.vcxproj.filters  version.json
NodeAuth/: CMakeLists.txt  NodeAuth-Debug.vgdbsettings  NodeAuth-Release.vgdbsettings  NodeAuth.cpp  NodeAuth.h  NodeAuth.vcxproj  NodeAuth.vcxproj.filters  SmartShop - Shortcut.lnk
PicoClient/: CMakeLists.txt  PicoClient.vgdbproj
RESTServer/: CMakeLists.txt  RESTServer-Debug.vgdbsettings  RESTServer-Release.vgdbsettings  RESTServer.cpp  RESTServer.h  RESTServer.vcxproj  RESTServer.vcxproj.filters
RaspUtils/: CMakeLists.txt  CPUInfo.cpp  CPUInfo.h  JSON.cpp  JSON.h  RaspUtils-Debug.vgdbsettings  RaspUtils-Release.vgdbsettings  RaspUtils.vcxproj  RaspUtils.vcxproj.filters  Temp.cpp
SensorEvent/: BinaryData.cpp  BinaryData.h  CMakeLists.txt  ColorData.cpp  ColorData.h  FloatData.cpp  FloatData.h  IntData.cpp  IntData.h  SensorDataBase.h  SensorEvent-Debug.vgdbsettings  SensorEvent-Release.vgdbsettings  SensorEvent.cpp  SensorEvent.h  SensorEvent.vcxproj  SensorEvent.vcxproj.filters  StringData.cpp  StringData.h  SwitchData.cpp  SwitchData.h  VectorData.cpp  VectorData.h  version.json
Server/: CMakeLists.txt  EventEndpoint.cpp  EventEndpoint.h  Init.cpp  Init.h  LogEndpoint.cpp  LogEndpoint.h  PreLoad.cmake  RESTServer.cpp  RESTServer.h  RegisterEndpoint.cpp  RegisterEndpoint.h  Server-Debug.vgdbsettings  Server-Release.vgdbsettings  Server.cpp  Server.h  Server.vcxproj  Server.vcxproj.filters  Settings.h  WindowManager.cpp  WindowManager.h
Telemetry/: CMakeLists.txt  CPUStats.h  FileSystemStats.h  ProcessTableStats.h  RAMStats.h  SwapStats.h  Telemetry-Debug.vgdbsettings  Telemetry-Release.vgdbsettings  Telemetry.cpp  Telemetry.h  Telemetry.vcxproj  Telemetry.vcxproj.filters
UI/: CMakeLists.txt  LogTable.cpp  LogTable.h  MainWindow.cpp  MainWindow.h  NodeWidgetManager.cpp  NodeWidgetManager.h  PluginManager.cpp  PluginManager.h  Settings.h  UI-Debug.vgdbsettings  UI-Release.vgdbsettings  UI.vcxproj  UI.vcxproj.filters  WindowManager.cpp  WindowManager.h  dlclass.cpp  dlclass.hpp  version.json
ZeroConf/: CMakeLists.txt  Capabilities.cpp  Capabilities.h  Peer.cpp  Peer.h  ZeroConf-Debug.vgdbsettings  ZeroConf-Release.vgdbsettings  ZeroConf.cpp  ZeroConf.h  ZeroConf.vcxproj  ZeroConf.vcxproj.filters
(+1169 files in other folders)
