cmake_minimum_required(VERSION 3.18)
SET(PROJECT_NAME "Components")
project($PROJECT_NAME VERSION 1.0)

#add_subdirectory(cJSON-master cJSON)
#add_subdirectory(cpp-base64-master cpp-base64)
#add_subdirectory(libuuid-master libuuid)
#add_subdirectory(libwpa libwpa)
#add_subdirectory(md5-master md5)
#add_subdirectory(oatpp-master oatpp)
#add_subdirectory(pigpio-master pigpio)
add_subdirectory(sigar-master sigar)
#add_subdirectory(WebServer WebServer)