cmake_minimum_required(VERSION 3.19)
SET(PROJECT_NAME "sqlite3")
project($PROJECT_NAME VERSION 3.40.1)


 add_compile_definition(_REENTRANT=1)
 add_compile_definition(SQLITE_THREADSAFE=1)
 add_compile_definition(SQLITE_ENABLE_MATH_FUNCTIONS)
 add_compile_definition(SQLITE_ENABLE_FTS4)
 add_compile_definition(SQLITE_ENABLE_FTS5)
 add_compile_definition(SQLITE_ENABLE_RTREE)
 add_compile_definition(SQLITE_ENABLE_GEOPOLY)
 add_compile_definition(SQLITE_HAVE_ZLIB)
add_compile_definition(PACKAGE_NAME="sqlite")
add_compile_definition(PACKAGE_TARNAME="sqlite")
add_compile_definition(PACKAGE_VERSION="3.40.1")
add_compile_definition(PACKAGE_STRING="sqlite 3.40.1")
add_compile_definition(PACKAGE_BUGREPORT="http://www.sqlite.org")
add_compile_definition(PACKAGE_URL="")
add_compile_definition(PACKAGE="sqlite")
add_compile_definition(VERSION="3.40.1")
add_compile_definition(HAVE_STDIO_H=1)
add_compile_definition(HAVE_STDLIB_H=1)
add_compile_definition(HAVE_STRING_H=1)
add_compile_definition(HAVE_INTTYPES_H=1)
add_compile_definition(HAVE_STDINT_H=1)
add_compile_definition(HAVE_STRINGS_H=1)
add_compile_definition(HAVE_SYS_STAT_H=1)
add_compile_definition(HAVE_SYS_TYPES_H=1)
add_compile_definition(HAVE_UNISTD_H=1)
add_compile_definition(STDC_HEADERS=1)
add_compile_definition(HAVE_DLFCN_H=1)
add_compile_definition(LT_OBJDIR=".libs/")
add_compile_definition(HAVE_FDATASYNC=1) 
add_compile_definition(HAVE_USLEEP=1) 
add_compile_definition(HAVE_LOCALTIME_R=1)
add_compile_definition(HAVE_GMTIME_R=1)
add_compile_definition(HAVE_DECL_STRERROR_R=1) 
add_compile_definition(HAVE_STRERROR_R=1)
add_compile_definition(HAVE_POSIX_FALLOCATE=1)
add_compile_definition(HAVE_ZLIB_H=1)

add_library(sqlite3 SHARED sqlite3.c)

