cmake_minimum_required(VERSION 3.19)
SET(PROJECT_NAME "sqlite3")
project($PROJECT_NAME VERSION 3.40.1)


 add_compile_definitions(_REENTRANT=1)
 add_compile_definitions(SQLITE_THREADSAFE=1)
 add_compile_definitions(SQLITE_ENABLE_MATH_FUNCTIONS)
 add_compile_definitions(SQLITE_ENABLE_FTS4)
 add_compile_definitions(SQLITE_ENABLE_FTS5)
 add_compile_definitions(SQLITE_ENABLE_RTREE)
 add_compile_definitions(SQLITE_ENABLE_GEOPOLY)
 add_compile_definitions(SQLITE_HAVE_ZLIB)
add_compile_definitions(PACKAGE_NAME="sqlite")
add_compile_definitions(PACKAGE_TARNAME="sqlite")
add_compile_definitions(PACKAGE_VERSION="3.40.1")
add_compile_definitions(PACKAGE_STRING="sqlite 3.40.1")
add_compile_definitions(PACKAGE_BUGREPORT="http://www.sqlite.org")
add_compile_definitions(PACKAGE_URL="")
add_compile_definitions(PACKAGE="sqlite")
add_compile_definitions(VERSION="3.40.1")
add_compile_definitions(HAVE_STDIO_H=1)
add_compile_definitions(HAVE_STDLIB_H=1)
add_compile_definitions(HAVE_STRING_H=1)
add_compile_definitions(HAVE_INTTYPES_H=1)
add_compile_definitions(HAVE_STDINT_H=1)
add_compile_definitions(HAVE_STRINGS_H=1)
add_compile_definitions(HAVE_SYS_STAT_H=1)
add_compile_definitions(HAVE_SYS_TYPES_H=1)
add_compile_definitions(HAVE_UNISTD_H=1)
add_compile_definitions(STDC_HEADERS=1)
add_compile_definitions(HAVE_DLFCN_H=1)
add_compile_definitions(LT_OBJDIR=".libs/")
add_compile_definitions(HAVE_FDATASYNC=1) 
add_compile_definitions(HAVE_USLEEP=1) 
add_compile_definitions(HAVE_LOCALTIME_R=1)
add_compile_definitions(HAVE_GMTIME_R=1)
add_compile_definitions(HAVE_DECL_STRERROR_R=1) 
add_compile_definitions(HAVE_STRERROR_R=1)
add_compile_definitions(HAVE_POSIX_FALLOCATE=1)
add_compile_definitions(HAVE_ZLIB_H=1)

add_library(sqlite3 SHARED sqlite3.c)

